--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,6 +15,8 @@ linux_build_task:
   apt_script:
     - apt-get update -qq
     - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev libflac-dev libvorbis-dev libogg-dev git build-essential libtool libtool-bin wget python python-pip libmp3lame-dev librtaudio-dev -qq -y
+    - update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
+    - update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
 
   submodules_script: git submodule sync --recursive && git submodule update --init --recursive
   
