Tidy up CMakeLists, correct rtaudio toolchain path, let system decide which compiler to use

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -63,7 +63,7 @@ win_build_task:
     image: ubuntu:latest
 
   apt_script:
-    - apt-get update && apt-get install mingw-w64 mingw-w64-tools pkg-config git libtool libtool-bin build-essential wget autoconf automake python python-pip zip -y
+    - apt-get update && apt-get install mingw-w64 mingw-w64-tools pkg-config git libtool libtool-bin build-essential wget autoconf automake python python-pip zip gcc-multilib g++-multilib -y
     - update-alternatives --set ${COMPILER_TRIPLET}-gcc /usr/bin/${COMPILER_TRIPLET}-gcc-posix
     - update-alternatives --set ${COMPILER_TRIPLET}-g++ /usr/bin/${COMPILER_TRIPLET}-g++-posix
 
@@ -155,7 +155,7 @@ win_build_task:
   # Depends on libsndfile
     - cd rtaudio-5.1.0
     - mkdir __build && cd __build
-    - cmake .. -DCMAKE_TOOLCHAIN_FILE=../.ci/mingw32.cmake -DRTAUDIO_API_DS=ON -DRTAUDIO_API_JACK=OFF -DCMAKE_INSTALL_PREFIX=/usr/${COMPILER_TRIPLET}
+    - cmake .. -DCMAKE_TOOLCHAIN_FILE=../../.ci/mingw32.cmake -DRTAUDIO_API_DS=ON -DRTAUDIO_API_JACK=OFF -DCMAKE_INSTALL_PREFIX=/usr/${COMPILER_TRIPLET}
     - cmake --build .
     - cmake --install .
 
