--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -185,13 +185,18 @@ win_build_task:
     - if [[ $COMPILER_TRIPLET == "x86_64"* ]]; then export ADDRESS_MODEL=64; else export ADDRESS_MODEL=32; fi;
     - ./b2 --user-config=user-config.jam --build-type=complete --layout=versioned toolset=gcc target-os=windows link=static release address-model=$ADDRESS_MODEL architecture=x86 install
 
-  spdlog_download_script:
+  spdlog_download_cache:
+    folder: spdlog-1.3.1
+    populate_script:
     - wget https://github.com/gabime/spdlog/archive/v1.3.1.tar.gz
     - tar xf v1.3.1.tar.gz
+  
+  spdlog_install_script:
     - cd spdlog-1.3.1
     - mkdir build && cd build
     - cmake .. -DCMAKE_TOOLCHAIN_FILE=../../.ci/mingw32.cmake -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=/usr/${COMPILER_TRIPLET}
     - make -j
+    - make install
 
   build_script:
     - mkdir -p __build
@@ -207,3 +212,11 @@ win_build_task:
 
   package_artifacts:
     path: __build/chronicle-win*-*.*
+
+# publish_task:
+  - depends_on:
+    - linux_build_task
+    - win_build_task
+#   - only_if: $CIRRUS_BRANCH == 'master'
+#   - script:
+#     - .ci/mingw32-32/chronicle-create-bb-upload.sh
