--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -35,6 +35,19 @@ linux_build_task:
     - cd boost_1_68_0
     - ./b2 install
 
+  spdlog_download_cache:
+    folder: spdlog-1.3.1
+    populate_script:
+      - wget https://github.com/gabime/spdlog/archive/v1.3.1.tar.gz
+      - tar xf v1.3.1.tar.gz
+  
+  spdlog_install_script:
+    - cd spdlog-1.3.1
+    - mkdir build && cd build
+    - cmake .. -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF
+    - make -j
+    - make install
+
   build_script:
     - mkdir -p __build
     - cd __build
