Update CMakeLists to remove compiler triplet override

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-if(NOT $ENV{COMPILER_TRIPLET} OR $ENV{COMPILER_TRIPLET} STREQUAL "")
+if((NOT $ENV{COMPILER_TRIPLET} OR $ENV{COMPILER_TRIPLET} STREQUAL "") AND ${CMAKE_CROSSCOMPILING})
     message(WARNING "COMPILER_TRIPLET not found; Setting manually to x86_64-w64-mingw32")
     set(COMPILER_TRIPLET "x86_64-w64-mingw32")
 endif()
