correct cirrus syntax

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -228,9 +228,12 @@ win_build_task:
     path: __build/chronicle-*-win*.*
 
 publish_task:
-  - depends_on:
+  container:
+      image: gcc:latest
+
+  depends_on:
     - linux_build_task
     - win_build_task
-  - only_if: $CIRRUS_BRANCH == 'master'
-  - publish_script:
+  only_if: $CIRRUS_BRANCH == 'master'
+  publish_script:
     - .ci/mingw32-32/chronicle-create-bb-upload.sh
