--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -43,7 +43,7 @@ linux_build_task:
   
   spdlog_install_script:
     - cd spdlog-1.3.1
-    - mkdir build && cd build
+    - mkdir -p __build && cd __build
     - cmake .. -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF
     - make -j
     - make install
@@ -176,7 +176,7 @@ win_build_task:
   rtaudio_build_script:
   # Depends on libsndfile
     - cd rtaudio-5.1.0
-    - mkdir __build && cd __build
+    - mkdir -p __build && cd __build
     - cmake .. -DCMAKE_TOOLCHAIN_FILE=../../.ci/mingw32.cmake -DRTAUDIO_API_DS=ON -DRTAUDIO_API_WASAPI=ON -DRTAUDIO_API_JACK=OFF -DCMAKE_INSTALL_PREFIX=/usr/${COMPILER_TRIPLET}
     - cmake --build .
     - cmake --install .
@@ -218,7 +218,7 @@ win_build_task:
   
   spdlog_install_script:
     - cd spdlog-1.3.1
-    - mkdir build && cd build
+    - mkdir -p __build && cd __build
     - cmake .. -DCMAKE_TOOLCHAIN_FILE=../../.ci/mingw32.cmake -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_BENCH=OFF -DSPDLOG_BUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=/usr/${COMPILER_TRIPLET}
     - make -j
     - make install
