Add BOOST_DEBUG for more info on why 32bit build is failing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ else()
     message(FATAL_ERROR "Could not find RtAudio! Exiting...")
 endif()
 
-
+set(BOOST_DEBUG ON)
 find_package(Boost REQUIRED filesystem)
 if(Boost_FILESYSTEM_FOUND)
     message(STATUS "Found Boost filesystem...")
