--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -28,7 +28,7 @@ linux_build_task:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
-      - ./bootstrap.sh --with-libraries=system,filesystem
+      - ./bootstrap.sh --with-libraries=system,filesystem,program_options
   
   boost_build_script:
     - cd boost_1_68_0
@@ -203,7 +203,7 @@ win_build_task:
 
   boost_build_script:
     - cd boost_1_68_0
-    - ./bootstrap.sh --with-libraries=system,filesystem --prefix=/usr/${COMPILER_TRIPLET}
+    - ./bootstrap.sh --with-libraries=system,filesystem,program_options --prefix=/usr/${COMPILER_TRIPLET}
     - if [[ $COMPILER_TRIPLET == "x86_64"* ]]; then export ADDRESS_MODEL=64; else export ADDRESS_MODEL=32; fi;
     - ./b2 --user-config=user-config.jam --build-type=complete --layout=versioned toolset=gcc target-os=windows link=static release address-model=$ADDRESS_MODEL architecture=x86 install
 
