--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,9 +21,9 @@ linux_build_task:
   cmake_install_script: cp -r cmake-3.15.2-Linux-x86_64/* /
 
   boost_build_script:
-    - wget https://dl.bintray.com/boostorg/release/1.65.0/source/boost_1_65_0.tar.gz
-    - tar xf boost_1_65_0.tar.gz
-    - cd boost_1_65_0
+    - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
+    - tar xf boost_1_68_0.tar.gz
+    - cd boost_1_68_0
     - ./bootstrap.sh --with-libraries=system,filesystem,program_options
     - ./b2 install
 
@@ -92,7 +92,7 @@ win_build_task:
   lame_build_script:
     - cd lame-3.100
     - ./configure --disable-decoder --disable-shared --enable-static --host=${COMPILER_TRIPLET} --prefix=/usr/${COMPILER_TRIPLET}
-    - make
+    - make -j4
     - make install
 
   libogg_download_cache:
@@ -105,7 +105,7 @@ win_build_task:
   libogg_install_script:
     - cd libogg-1.3.3
     - ./configure --host=${COMPILER_TRIPLET} --prefix=/usr/${COMPILER_TRIPLET}
-    - make && make install
+    - make -j4 && make install
 
   libvorbis_download_cache:
     folder: libvorbis-1.3.6
@@ -117,7 +117,7 @@ win_build_task:
   libvorbis_install_script:
     - cd libvorbis-1.3.6
     - ./configure --host=${COMPILER_TRIPLET} --prefix=/usr/${COMPILER_TRIPLET}
-    - make && make install
+    - make -j4 && make install
 
   libflac_download_cache:
     folder: flac-1.3.2
@@ -129,7 +129,7 @@ win_build_task:
   libflac_install_script:
     - cd flac-1.3.2
     - ./configure --disable-thorough-tests --host=${COMPILER_TRIPLET} --prefix=/usr/${COMPILER_TRIPLET}
-    - make && make install
+    - make -j4 && make install
 
   libspeex_download_cache:
     folder: speex-1.2.0
@@ -141,7 +141,7 @@ win_build_task:
   libspeex_install_script:
     - cd speex-1.2.0
     - ./configure --host=${COMPILER_TRIPLET} --prefix=/usr/${COMPILER_TRIPLET}
-    - make && make install
+    - make -j4 && make install
 
   libsndfile_download_cache:
     folder: libsndfile-1.0.28
@@ -153,7 +153,7 @@ win_build_task:
   libsndfile_build_script:
     - cd libsndfile-1.0.28
     - ./configure --host=${COMPILER_TRIPLET} --disable-static --prefix=/usr/${COMPILER_TRIPLET}
-    - make
+    - make -j4
     - make install
 
   rtaudio_download_cache:
@@ -181,13 +181,13 @@ win_build_task:
   ncurses_build_script:
     - cd ncurses-6.1
     - ./configure --enable-term-driver --enable-sp-funcs --host=${COMPILER_TRIPLET} --with-build-cc=gcc --with-pkg-config-libdir=${PKG_CONFIG_PATH} --enable-pc-files --prefix=/usr/${COMPILER_TRIPLET}
-    - make
+    - make -j4
     - make install
 
   boost_build_script:
-    - wget https://dl.bintray.com/boostorg/release/1.65.0/source/boost_1_65_0.tar.gz
-    - tar xf boost_1_65_0.tar.gz
-    - cd boost_1_65_0
+    - wget https://dl.bintray.com/boostorg/release/1.65.0/source/boost_1_68_0.tar.gz
+    - tar xf boost_1_68_0.tar.gz
+    - cd boost_1_68_0
     - 'echo "using gcc : : ${COMPILER_TRIPLET}-gcc ;" > user-config.jam'
     - ./bootstrap.sh --with-libraries=system,filesystem,program_options --prefix=/usr/${COMPILER_TRIPLET}
     - if [[ $COMPILER_TRIPLET == "x86_64"* ]]; then export ADDRESS_MODEL=64; else export ADDRESS_MODEL=32; fi;
