--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -226,17 +226,24 @@ win_machine_build_task:
     os_version: 2019
 
   choco_script:
-    - cinst -y -r git cmake wget tartool make visualstudio2017community
+    - cinst -y -r git cmake wget tartool make #visualstudio2017community
 
-  vcpkg_script:
-    - git clone https://github.com/Microsoft/vcpkg.git
-    - cd vcpkg
-    - ps: .\bootstrap-vcpkg.bat
-    - ps: .\vcpkg integrate install
+  # vcpkg_script:
+  #   - git clone https://github.com/Microsoft/vcpkg.git
+  #   - cd vcpkg
+  #   - ps: .\bootstrap-vcpkg.bat
+  #   - ps: .\vcpkg integrate install
 
-  deps_script:
-    - cd vcpkg
-    - .\vcpkg install libsndfile libflac libvorbis libogg spdlog
+  # deps_script:
+  #   - cd vcpkg
+  #   - .\vcpkg install libsndfile libflac libvorbis libogg spdlog
+
+  nuget_script:
+    - ps: Install-Package libsndfile-msvc-x64 -Version 1.0.27.9902
+    - ps: Install-Package FLAC.WindowsRuntime -Version 1.1.0
+    - ps: Install-Package vorbis-msvc-x64 -Version 1.3.5.8787
+    - ps: Install-Package libogg -Version 1.3.0.1
+    - ps: Install-Package spdlog.native -Version 1.0.0
 
   lame_download_script:
     - ps: wget https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
