--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,7 +21,8 @@ win_machine_build_task:
   #   - .\vcpkg install libsndfile libflac libvorbis libogg spdlog
 
   nuget_install_script:
-    - ps: Install-PackageProvider -Name "Nuget" -RequiredVersion "2.8.5.216" -Force
+    - ps: "[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12"
+    - ps: Install-PackageProvider -Name "Nuget" -MinimumVersion "2.8.5.216" -Force
 
   nuget_script:
     - ps: Install-Package libsndfile-msvc-x64
